Actualización backend conexión con servidor y base de datos

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <!-- Barra de navegación -->
-        <nav class="navbar navbar-expand-sm">
+        <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
                 <div class="col-md-2">
                     <a class="navbar-brand" href="#"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png"
