--- a/public/soporte.html
+++ b/public/soporte.html
@@ -113,7 +113,7 @@
                     <br>
                     <select name="categorias[]" id="#" style="width: 100%">
                         <option value="cursosVirtuales">Cursos Virtuales</option>
-                        <option value="pruebasPsicometricas">Pruebas Psicométricas</option>
+                        <option value="pruebasPsicometricas">Herramientas de medición</option>
                         <option value="rrhhSoftware">Software Gestión RRHH</option>
                     </select>
                 </p>
