--- a/public/ingreso.html
+++ b/public/ingreso.html
@@ -3,10 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./STYLES/ingreso.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
+    <title>Login PEHTR</title>
 </head>
-<body>
-    <h1>Soy la página de ingreso</h1>
+<body class="wrap d-flex justify-content-center align-items-center vh-100">
+    <div class="bg-white p-5 rounded-5 text-secondary" style="height: 30rem">
+        <div class="d-flex justify-content-center">
+        <img src="./ASSETS/IMG/Logo ArachneCol.png" alt="LoginIcon" style="height: 7rem">
+        </div>
+        <div><h1>¡BIENVENIDO!</h1></div>
+        <div class="input-group justify-content-center">
+            <div>
+                <i class="fa-regular fa-circle-user input-group-text"></i> 
+            </div>
+            <input type="text" placeholder="Usuario">
+        </div>
+        <div class="input-group justify-content-center mt-2">
+            <div>
+                <i class="fa-solid fa-lock input-group-text"></i> 
+            </div>
+            <input type="password" placeholder="Contraseña">
+        </div>
+        <div>
+            <div class="d-flex justify-content-center">
+                <input type="checkbox">
+                <div>Recordar credenciales</div>
+            </div>     
+            <div class="d-flex justify-content-center"><a href="#">¿Olvidaste tu contraseña?</a></div>       
+        </div>
+        <div class="d-flex justify-content-center">
+            <button>Ingresa</button>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div>¿No tienes una cuenta?</div>
+        </div>
+            <a href="./registro.html">Registrate aqui</a>
+        </div>
+    </div>
+    
+
        <!-- Fomulario debe tener:
 - Correo electrónico
 - Contraseña 
