Actualización Página Ingreso html

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
                                     <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
                                     </li>
                                     <hr>
-                                    <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+                                    <li><a class="dropdown-item" href="./ingreso.html">Inicia Sesión</a></li>
                                 </ul>
                             </li>
                         </ul>
