--- a/public/soporte.html
+++ b/public/soporte.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PEHTR</title>
+    <title>Soporte PEHTR</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./STYLES/styles.css">
+    <link rel="stylesheet" href="./STYLES/soporte.css">
     <link rel="stylesheet" href="./STYLES/mq.css">
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -73,7 +73,7 @@
     <main>
         <br>
         <!-- BANNER -->
-        <section class="wrap">
+        <section class="wrap1">
             <div class="wrap-texto">
                 <h2>SOPORTE TÉCNICO</h2>
                 <p>Solucionaremos los inconvenientes lo antes posible</p>
