--- a/public/ingreso.html
+++ b/public/ingreso.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
     <link rel="stylesheet" href="./STYLES/ingreso.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
     <title>Login PEHTR</title>
 </head>
-<body class="wrap d-flex justify-content-center align-items-center vh-100">
-    <div class="bg-white p-5 rounded-5 text-secondary" style="height: 30rem">
+<body class="wrap2 d-flex align-items-center justify-content-center vh-100">
+    <div class="inicioBox p-5 rounded-5 text-light" style="height: 30rem">
         <div class="d-flex justify-content-center">
-        <img src="./ASSETS/IMG/Logo ArachneCol.png" alt="LoginIcon" style="height: 7rem">
+        <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png" alt="LoginIcon" style="height: 7rem"></a>
         </div>
-        <div><h1>¡BIENVENIDO!</h1></div>
+        <div class="d-flex justify-content-center"><h3>Inicio de sesión</h3></div>
+        <br>
         <div class="input-group justify-content-center">
             <div>
                 <i class="fa-regular fa-circle-user input-group-text"></i> 
@@ -30,23 +32,24 @@
             <div class="d-flex justify-content-center">
                 <input type="checkbox">
                 <div>Recordar credenciales</div>
-            </div>     
-            <div class="d-flex justify-content-center"><a href="#">¿Olvidaste tu contraseña?</a></div>       
-        </div>
-        <div class="d-flex justify-content-center">
+            </div>
+            <div class="d-flex justify-content-center">
             <button>Ingresa</button>
+            </div>
         </div>
+        <div class="d-flex justify-content-center"><a href="#">¿Olvidaste tu contraseña?</a></div>
+        <br>
         <div class="d-flex justify-content-center">
             <div>¿No tienes una cuenta?</div>
         </div>
+        <div class="d-flex justify-content-center">
             <a href="./registro.html">Registrate aqui</a>
         </div>
     </div>
     
-
-       <!-- Fomulario debe tener:
+<!-- Fomulario debe tener:
 - Correo electrónico
 - Contraseña 
-- Botón de registro--> 
+- Botón de registro-->
 </body>
 </html>
