Actualización Entrega4Unidad2

--- a/public/index.html
+++ b/public/index.html
@@ -73,10 +73,10 @@
                                     <i class="fa-regular fa-circle-user"></i>
                                 </a>
                                 <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="./ingreso.html">Inicia Sesión</a></li>
+                                    <hr>
                                     <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
                                     </li>
-                                    <hr>
-                                    <li><a class="dropdown-item" href="./ingreso.html">Inicia Sesión</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -91,7 +91,7 @@
 
         <h1>Programa de Entrenamiento en Habilidades para el Trabajo Remoto</h1>
         <br>
-        <section class="seccion1" id="queEs">
+        <section class="seccion1 rounded-3" id="queEs">
 
             <h2>¿Qué es el PEHTR?</h2>
             <hr>
@@ -156,7 +156,7 @@
         </section>
         <br>
         <!-- Estructura -->
-        <section class="seccion2" id="estructura">
+        <section class="seccion2 rounded-3" id="estructura">
             <h2>Estructura</h2>
             <hr>
             <p>Cada módulo de estudio ofrece contenido agradable, actividades y pruebas que garantizan un aprendizaje
@@ -216,16 +216,17 @@
         <br>
 
         <!-- Contenido -->
-        <section class="seccion3" id="contenido">
+        <section class="seccion3 rounded-3" id="contenido">
             <h2>Contenido</h2>
             <hr>
             <p>El curso se desarrolla a través de cuatro módulos que abordan habilidades estratégicas, comenzando desde
                 el autoconocimiento y continuando con la identificación de factores externos que impactan el desempeño
                 laboral, pero que pueden adaptarse a favor de cada individuo.</p>
         </section>
+        <br>
 
         <!-- Descripción módulo 1 -->
-        <section class="modulo1" id="mod1">
+        <section class="modulo1 rounded-3" id="mod1">
             <h3>Módulo 1 - Introducción</h3>
             <div class="container text-center">
                 <iframe class="video1" width="100%" height="auto" src="https://www.youtube.com/embed/-DdlGj0BxC4"
@@ -248,7 +249,7 @@
         <br>
 
         <!-- Descripción módulo 2 -->
-        <section class="modulo2" id="mod2">
+        <section class="modulo2 rounded-3" id="mod2">
             <h3>Módulo 2 - Habilidades de autonomía</h3>
             <hr>
             <div class="container text-center">
@@ -278,7 +279,7 @@
         <br>
 
         <!-- Descripción módulo 3 -->
-        <section class="modulo3" id="mod3">
+        <section class="modulo3 rounded-3" id="mod3">
             <h3>Módulo 3 - Habilidades para la buena gestión del tiempo</h3>
             <hr>
             <div class="container text-center">
@@ -309,7 +310,7 @@
         <br>
 
         <!-- Descripción módulo 4 -->
-        <section class="modulo4" id="mod4">
+        <section class="modulo4 rounded-3" id="mod4">
             <h3>Módulo 4 - Uso de herramientas tecnológicas</h3>
             <hr>
             <div class="container text-center">
