--- a/public/admin.html
+++ b/public/admin.html
@@ -3,10 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
+    <link rel="stylesheet" href="./STYLES/admin.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
+    <title>Admin PEHTR</title>
 </head>
-<body>
-    <h1>Soy la página admin</h1>
+<body class="wrap4 d-flex align-items-center justify-content-center vh-100">
+    <div class="inicioBox p-5 rounded-5 text-light" style="height: 30rem" >
+        <div class="d-flex justify-content-center">
+        <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png" alt="LoginIcon" style="height: 
+3rem"></a>
+        </div>
+        <div class="d-flex justify-content-center">
+            <h3>Acceso Administrador</h3>
+        </div>
+        <div class="d-flex justify-content-center">
+            <p>Ingresa tus credenciales de administrador</p>
+        </div>
+        <div class="input-group justify-content-center">
+            <div>
+                <i class="fa-regular fa-circle-user input-group-text"></i> 
+            </div>
+            <input type="text" placeholder="Usuario Admin">
+        </div>
+        <div class="input-group justify-content-center mt-2">
+            <div>
+                <i class="fa-solid fa-lock input-group-text"></i> 
+            </div>
+            <input type="password" placeholder="Contraseña">
+        </div>
+        <br>
+        <div>
+            <div class="d-flex justify-content-center">
+                <input type="checkbox">
+                <div>Recordar credenciales</div>
+            </div>
+            <br>
+            <div class="d-flex justify-content-center">
+            <button>Ingresa</button>
+            </div>
+        </div>
+        <br>
+        <div class="d-flex justify-content-center"><a href="#">¿Olvidaste tu contraseña?</a></div>       
+    </div>
     
+<!-- Fomulario debe tener:
+- Correo electrónico
+- Contraseña 
+- Botón de registro-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"> </script>
 </body>
 </html>
