--- a/public/registro.html
+++ b/public/registro.html
@@ -1,17 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
+    <link rel="stylesheet" href="./STYLES/registro.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/31b9f39739.js" crossorigin="anonymous"></script>
     <title>Registro PEHTR</title>
 </head>
-<body>
-    <h1>Soy la página de registro</h1>
-   <!-- Fomulario debe tener:
-- Nombre completo
-- Correo electrónico
-- Contraseña 
-- Botón de registro--> 
+
+<body class="wrap3 d-flex justify-content-left">
+    <div class="inicioBox p-5 text-light" style="width: 40rem">
+        <div class="d-flex justify-content-center">
+            <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png" alt="LoginIcon" style="height: 
+3rem"></a>
+        </div>
+        <div class="d-flex justify-content-center">
+            <h3>¡Bienvenido!</h3>
+        </div>
+        <div class="d-flex justify-content-center">
+            <p>Solo debes registrar estos datos y podrás acceder a nuestro contenido</p>
+        </div>
+        <div>
+            <label>
+                <p>Nombre completo:</p>
+            </label>
+            <input type="text" placeholder="Escribe aqui tu nombre completo" style="width: 100%">
+        </div>
+        <br>
+        <div>
+            <label>
+                <p>Correo electrónico:</p>
+            </label>
+            <input type="text" placeholder="Escribe aqui tu correo electrónico" style="width: 100%">
+        </div>
+        <br>
+        <div>
+            <label>
+                <p>Asigna una contraseña:</p>
+            </label>
+            <input type="password" placeholder="Escribe aqui tu contraseña" style="width: 100%">
+        </div>
+        <br>
+        <div class="d-flex justify-content-between">
+            <div class="justify-content-between">
+                <button>Enviar</button>
+            </div>
+            <div>
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <i class="fa-solid fa-gear"></i>
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
+            </ul>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"> </script>
 </body>
+
 </html>
