Actualización frontend oficina

--- a/public/registro.html
+++ b/public/registro.html
@@ -14,8 +14,7 @@
 <body class="wrap3 d-flex justify-content-left">
     <div class="inicioBox p-5 text-light" style="width: 40rem">
         <div class="d-flex justify-content-center">
-            <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png" alt="LoginIcon" style="height: 
-3rem"></a>
+            <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height:3rem"></a>
         </div>
         <div class="d-flex justify-content-center">
             <h3>¡Bienvenido!</h3>
