--- a/public/ingreso.html
+++ b/public/ingreso.html
@@ -12,7 +12,7 @@
 <body class="wrap2 d-flex align-items-center justify-content-center vh-100">
     <div class="inicioBox p-5 rounded-5 text-light" style="height: 30rem" >
         <div class="d-flex justify-content-center">
-        <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png" alt="LoginIcon" style="height: 3rem"></a>
+        <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height: 3rem"></a>
         </div>
         <div class="d-flex justify-content-center"><h3>Inicio de sesión</h3></div>
         <div class="input-group justify-content-center">
