--- a/public/soporte.html
+++ b/public/soporte.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-sm">
             <div class="container text-left">
                 <div class="col-md-3">
-                    <a class="navbar-brand" href="#"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png"
+                    <a class="navbar-brand" href="#"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif"
                             width="30%"></a>
                 </div>
                 <div class="col-md-9">
@@ -179,7 +179,7 @@
                 </div>
 
                 <div class="col text-center align-self-center">
-                    <img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png" width="15%">
+                    <img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" width="15%">
                     <p class="footerText">Visítanos para conocer más cursos y software en: <br><a
                             href="https://www.arachnecol.com" target="_blank">www.arachneCol.com</a></p>
                 </div>
