Actualización Responsive Oficina

--- a/public/admin.html
+++ b/public/admin.html
@@ -12,8 +12,7 @@
 <body class="wrap4 d-flex align-items-center justify-content-center vh-100">
     <div class="inicioBox p-5 rounded-5 text-light" style="height: 30rem" >
         <div class="d-flex justify-content-center">
-        <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height: 
-5rem"></a>
+        <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height:5rem"></a>
         </div>
         <br>
         <div class="d-flex justify-content-center">
