--- a/public/index.html
+++ b/public/index.html
@@ -242,7 +242,7 @@
                         constancia, encontrar motivadores que te lleven a lograr objetivos y evitar aplazar las
                         obligaciones por disfrutar recompensas pasajeras.</p>
                 </article>
-                <div class="botonCurso">
+                <div class="botonCurso d-flex">
                     <a href="./modulo1.html">Ir al módulo 1</a>
                 </div>
         </section>
