--- a/public/registro.html
+++ b/public/registro.html
@@ -11,8 +11,8 @@
     <title>Registro PEHTR</title>
 </head>
 
-<body class="wrap3 d-flex justify-content-left">
-    <div class="inicioBox p-5 text-light" style="width: 40rem">
+<body class="wrap3 d-flex justify-content-center">
+    <div class="inicioBox p-5  rounded-5 text-light" style="width: 30rem">
         <div class="d-flex justify-content-center">
             <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height:3rem"></a>
         </div>
@@ -23,23 +23,17 @@
             <p>Solo debes registrar estos datos y podrás acceder a nuestro contenido</p>
         </div>
         <div>
-            <label>
-                <p>Nombre completo:</p>
-            </label>
+            <label>Nombre completo:</label>
             <input type="text" placeholder="Escribe aqui tu nombre completo" style="width: 100%">
         </div>
         <br>
         <div>
-            <label>
-                <p>Correo electrónico:</p>
-            </label>
+            <label>Correo electrónico:</label>
             <input type="text" placeholder="Escribe aqui tu correo electrónico" style="width: 100%">
         </div>
         <br>
         <div>
-            <label>
-                <p>Asigna una contraseña:</p>
-            </label>
+            <label>Asigna una contraseña:</label>
             <input type="password" placeholder="Escribe aqui tu contraseña" style="width: 100%">
         </div>
         <br>
