--- a/public/soporte.html
+++ b/public/soporte.html
@@ -21,12 +21,12 @@
     <header>
         <!-- Barra de navegación -->
         <nav class="navbar navbar-expand-sm">
-            <div class="container text-left">
-                <div class="col-md-3">
+            <div class="container-fluid">
+                <div class="col-md-3 col-sm-1">
                     <a class="navbar-brand" href="#"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif"
                             width="30%"></a>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 col-sm-11">
                     <button class="navbar-toggler menuDespl" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                         aria-label="Toggle navigation">
