--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,13 @@
 <body>
     <header>
         <!-- Barra de navegación -->
-        <nav class="navbar navbar-expand-md">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm">
+            <div class="container text-center">
                 <div class="col-md-2">
-                    <a class="navbar-brand" href="#"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif"
+                    <a class="navbar-brand" href="#"><img class="Logo" src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif"
                             width="30%"></a>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 col-sm-10">
                     <button class="navbar-toggler menuDespl" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
                                     </ul>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-2">
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
@@ -73,9 +73,9 @@
                                     <i class="fa-regular fa-circle-user"></i>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./ingreso.html">Inicia Sesión</a></li>
+                                    <li><a class="dropdown-item userDespl" href="./ingreso.html">Inicia Sesión</a></li>
                                     <hr>
-                                    <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
+                                    <li><a class="dropdown-item userDespl" href="./soporte.html" target="_blank">Soporte</a>
                                     </li>
                                 </ul>
                             </li>
@@ -164,47 +164,47 @@
 
             <div class="container text-center">
                 <div class="row">
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="card" style="width: 15rem;">
+                    <div class="col-md-6 col-lg-6 col-xl-3">
+                        <div class="card" style="width: 100%;">
                             <img src="./ASSETS/IMG/Video Introducción.jpg" class="card-img-top" alt="...">
                             <div class="card-body" id="card1">
-                                <h4>1. Introducción del módulo</h4>
-                                <p class="card-text">Con la ayuda de elementos audiovisuales agradables,
-                                    tendrás un primer acercamiento al contenido que estudiarás en cada módulo.</p>
+                                <h4>1. Introducción</h4><h4>del módulo</h4>
+                                <p class="card-text">Con la ayuda de elementos audiovisuales interesantes y agradables,
+                                    tendrás un primer acercamiento al contenido de estudio comenzando cada módulo.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="card" style="width: 15rem;">
+                    <div class="col-md-6 col-lg-6 col-xl-3">
+                        <div class="card" style="width: 100%;">
                             <img src="./ASSETS/IMG/Desarrollo temático.jpg" class="card-img-top" alt="...">
                             <div class="card-body" id="card2">
-                                <h4>2. Desarrollo temático</h4>
-                                <p class="card-text">En esta sección encontrarás contenido relacionado con
-                                    el tema de estudio. Todo dirigido a fortalecer tus habilidades y ampliar
+                                <h4>2. Desarrollo</h4><h4>temático</h4>
+                                <p class="card-text">En esta sección encontrarás todo el contenido académico relacionado con
+                                    el tema de estudio, que está dirigido a fortalecer tus habilidades y ampliar
                                     conocimientos.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="card" style="width: 15rem;">
+                    <div class="col-md-6 col-lg-6 col-xl-3">
+                        <div class="card" style="width: 100%;">
                             <img src="./ASSETS/IMG/Actividad afianzamiento2.jpg" class="card-img-top" alt="...">
                             <div class="card-body" id="card1">
-                                <h4>3. Actividad de afianzamiento</h4>
+                                <h4>3. Actividad de</h4><h4>afianzamiento</h4>
                                 <p class="card-text">Una vez hayas estudiado el contenido temático, podrás afianzar los
                                     conocimientos adquiridos con divertidos juegos y actividades interactivas.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="card" style="width: 15rem;">
+                    <div class="col-md-6 col-lg-6 col-xl-3">
+                        <div class="card" style="width: 100%;">
                             <img src="./ASSETS/IMG/Evaluación.jpg" class="card-img-top" alt="...">
                             <div class="card-body" id="card2">
-                                <h4>4. Test de evaluación</h4>
+                                <h4>4. Test de</h4><h4>evaluación</h4>
                                 <p class="card-text">Al finalizar cada módulo, tendrás la oportunidad de comprobar el
-                                    aprendizaje adquirido con pruebas sencillas sin límite de intentos.</p>
+                                    aprendizaje adquirido con una prueba sencilla y sin límite de intentos.</p>
                             </div>
                         </div>
                     </div>
@@ -242,7 +242,7 @@
                         constancia, encontrar motivadores que te lleven a lograr objetivos y evitar aplazar las
                         obligaciones por disfrutar recompensas pasajeras.</p>
                 </article>
-                <div class="botonCurso d-flex">
+                <div class="botonCurso">
                     <a href="./modulo1.html">Ir al módulo 1</a>
                 </div>
         </section>
