--- a/public/modulo3.html
+++ b/public/modulo3.html
@@ -80,7 +80,7 @@
         <h1>MÓDULO 3</h1>
         <H2>EN CONSTRUCCIÓN</H2>
         <h5>Actualmente este módulo se encuentra en construcción y próximamente estará disponible</h5>
-        <img src="./ASSETS/VIDEO/En construcción.gif" width="350px">
+        <img src="./ASSETS/VIDEO/En construcción.gif" width="40%">
         <br>
         <br>
         <button>
