Versión previa a la conexión con el FRONTEND

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                                     Contenido
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#mod1">Módulo 1 - Introducción</a></li>
+                                    <li><a class="dropdown-item" href="#mod1">Módulo 1 - La búsqueda de recompensas</a></li>
                                     <li><a class="dropdown-item" href="#mod2">Módulo 2 - Habilidades de
                                             autonomía</a></li>
                                     <li><a class="dropdown-item" href="#mod3">Módulo 3 - Habilidades para la buena
@@ -227,7 +227,7 @@
 
         <!-- Descripción módulo 1 -->
         <section class="modulo1 rounded-3" id="mod1">
-            <h3>Módulo 1 - Introducción</h3>
+            <h3>Módulo 1 - La búsqueda de recompensas</h3>
             <div class="container text-center">
                 <iframe class="video1" width="100%" height="auto" src="https://www.youtube.com/embed/-DdlGj0BxC4"
                     title="El sistema de recompensa: Cómo el cerebro asocia esfuerzo y premio | Sana Mente"
