--- a/public/modulo1.html
+++ b/public/modulo1.html
@@ -65,7 +65,7 @@
                                     Módulos
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./modulo1.html">Módulo 1 - Introducción</a></li>
+                                    <li><a class="dropdown-item" href="./modulo1.html">Módulo 1 - La búsqueda de recompensas</a></li>
                                     <li><a class="dropdown-item" href="./modulo2.html">Módulo 2 - Habilidades de
                                             autonomía</a></li>
                                     <li><a class="dropdown-item" href="./modulo3.html">Módulo 3 - Habilidades para la
@@ -99,12 +99,11 @@
         </nav>
     </header>
     <main class="container text-left">
-        <h2 class="mt-3" style="font-weight: bolder;">Módulo 1 - Introducción</h2>
-        <h2>La búsqueda de recompensas</h2>
-        
+        <h2 class="mt-3" style="font-weight: bolder;">Módulo 1 - La búsqueda de recompensas</h2>
+                
 <!-- Objetivos módulo -->
         <section class="modulo2 rounded-3" id="#objetivoMod1">
-            <h3>Objetivos del módulo</h3>
+            <h3>Objetivos</h3>
             <hr>
             <div class="container text-left">
                 <div class="row align-items-center">
