--- a/public/modulo4.html
+++ b/public/modulo4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo 4</title>
+    <title>PEHTR - Módulo 4</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./STYLES/styles.css">
@@ -42,7 +42,7 @@
                                     Contenido
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./modulo1.html">Módulo 1 - Introducción</a></li>
+                                    <li><a class="dropdown-item" href="./modulo1.html">Módulo 1 - La búsqueda de recompensas</a></li>
                                     <li><a class="dropdown-item" href="./modulo2.html">Módulo 2 - Habilidades de autonomía</a></li>
                                     <li><a class="dropdown-item" href="./modulo3.html">Módulo 3 - Habilidades para la buena gestión del tiempo</a></li>
                                     <li><a class="dropdown-item" href="./modulo4.html">Módulo 4 - Uso de herramientas tecnológicas</a></li>
