Entrega final Diplmado Desarrollo WEB Enfoque Psicología

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-sm">
             <div class="container text-center">
                 <div class="col-md-2">
-                    <a class="navbar-brand" href="#"><img class="Logo" src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif"
+                    <a class="navbar-brand" href="https://www.arachnecol.com"><img class="Logo" src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif"
                             width="30%"></a>
                 </div>
                 <div class="col-md-8 col-sm-10">
@@ -243,7 +243,7 @@
                         obligaciones por disfrutar recompensas pasajeras.</p>
                 </article>
                 <div class="botonCurso">
-                    <a href="./modulo1.html">Ir al módulo 1</a>
+                    <a href="./ingreso.html">Accede al contenido</a>
                 </div>
         </section>
         <br>
@@ -272,7 +272,7 @@
                     </div>
                 </div>
                 <div class="botonCurso">
-                    <a href="./modulo2.html">Ir al módulo 2</a>
+                    <a href="./ingreso.html">Accede al contenido</a>
                 </div>
 
         </section>
@@ -303,7 +303,7 @@
                     </div>
                 </div>
                 <div class="botonCurso">
-                    <a href="./modulo3.html">Ir al módulo 3</a>
+                    <a href="./ingreso.html">Accede al contenido</a>
                 </div>
 
         </section>
@@ -335,7 +335,7 @@
                     </div>
                 </div>
                 <div class="botonCurso">
-                    <a href="./modulo4.html">Ir al módulo 4</a>
+                    <a href="./ingreso.html">Accede al contenido</a>
                 </div>
         </section>
     </main>
