--- a/public/modulo1.html
+++ b/public/modulo1.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./STYLES/styles.css">
     <link rel="stylesheet" href="./STYLES/mq.css">
+    <link rel="stylesheet" href="./SCRIPTS/Modulo1.js">
     <link rel="shortcut icon" href="./ASSETS/IMG/Logo ArachneCol Software/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +24,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <div class="col-md-2">
-                    <a class="navbar-brand" href="#"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png"
+                    <a class="navbar-brand" href="https://www.arachnecol.com"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png"
                             width="30%"></a>
                 </div>
                 <div class="col-md-8">
@@ -36,7 +37,7 @@
 
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Inicio</a>
+                                <a class="nav-link" href="./inicioCurso.html">Bienvenid@</a>
                             </li>
 
                             <li class="nav-item">
@@ -88,7 +89,7 @@
                                     <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
                                     </li>
                                     <hr>
-                                    <li><a class="dropdown-item" href="#">Cerrar Sesión</a>
+                                    <li><a class="dropdown-item" href="./ingreso.html">Cerrar Sesión</a>
                                     <li>
                                 </ul>
                             </li>
@@ -114,7 +115,7 @@
                     </div>
                     <div class=col-md-8>
                         <article class="texto2" id="md2">
-                            <p>El objetivo de este módulo es ayudarte a fortalecer la constancia y encontrar motivadores que permitan lograr objetivos a mediano y largo plazo. Estas habilidades son útiles cuando sientas tentación de aplazar las obligaciones por disfrutar recompensas pasajeras.</p><p>Para ello, estudiaremos cómo funciona el sistema de recompensas en nuestro cerebro revisando el siguiente contenido:</p>
+                            <p>Los objetivos de este módulo son ayudar a fortalecer la constancia y encontrar motivadores que te impulsen a conseguir metas de mediano y largo plazo. Estas habilidades son útiles cuando sientas tentación de aplazar las obligaciones por disfrutar recompensas pasajeras.</p><p>Para ello, estudiaremos cómo funciona el sistema de recompensas en nuestro cerebro revisando el siguiente contenido:</p>
                             <ul class="introContent">
                                 <li><a>Cómo funciona el sistema de recompensas en nuestro cerebro</a></li>
                                 <li><a>Distractores que dificultan la realización de tareas</a></li>
@@ -141,13 +142,28 @@
                     </div>
                     <div class=col-md-8>
                         <article class="texto2" id="md2">
-                            <ul class="introContent">
-                                <li><a>Cómo funciona el sistema de recompensas en nuestro cerebro</a></li>
-                                <li><a>Distractores que dificultan la realización de tareas</a></li>
-                                <li><a>Proyección de metas significativas</a></li>
-                                <li><a>Teletrabajo: Las labores de la casa vs Las tareas del trabajo</a></li>
-                                <li><a>Cambio de óptica: De actividad demandante a motivador</a></li>
-                            </ul>
+                            <p>Inciarémos revisando el siguiente contenido:</p>
+                            <table class="table">
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Actividad</th>                                    
+                                    <th scope="col">Accede</th>
+                                  </tr>
+                                </thead>
+                                <tbody class="table-group-divider" id="miTabla">
+                                  <tr>
+                                    <td>Cómo funciona el sistema de recompensas en nuestro cerebro</td>
+                                    <td><button type="button" class="btn btn-success" id="OpenPopUp" onclick= "window.open('https://www.youtube.com/embed/-DdlGj0BxC4', '_blank', 'height=500,width=800,top=100,left=250')"><i class="bi bi-camera-reels-fill"></i></button>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td>Conoce a Toto, él te acompañará durante todo el programa</td>
+                                    <td><button type="button" class="btn btn-primary" id="OpenPopUp" onclick="window.open
+                                  ('https://www.youtube.com/watch?v=lfEj9iYGSmc', '_blank', 'height=500,width=800,top=100, left=250')"><i class="bi bi-emoji-smile-fill"></i></button>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
                         </article>
                     </div>
                 </div>               
@@ -157,7 +173,7 @@
         <section class="modulo2 rounded-3" id="desarrolloMod1">
             <h3>Desarrollo temático</h3>
             <hr>
-            <div class="container text-center">
+            <div class="container text-left">
                 <div class="row align-items-center">
                     <div class=col-md-4>
                         <figure class="img2">
@@ -166,13 +182,39 @@
                     </div>
                     <div class=col-md-8>
                         <article class="texto2" id="md2">
-                            <p class="textBold">"Algunas personas piensan que lo mejor de trabajar de manera remota es
-                                no tener al jefe encima"</p>
-                            <br>
-                            <p>Trabajar en casa conlleva a hacerlo sin la supervisión y orientación tradicional de la
-                                presencialidad. Esto implica que debes tomar decisiones y crear planes de trabajo para
-                                cumplir tus funciones de manera responsable. En este módulo encontrarás herramientas que
-                                fortalecerán tu autonomía, creatividad, productividad y responsabilidad.</p>
+                            <p>A continuación, los temas centrales de este módulo:</p>
+                            <table class="table">
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Actividad</th>                                    
+                                    <th scope="col">Accede</th>
+                                  </tr>
+                                </thead>
+                                <tbody class="table-group-divider" id="miTabla">
+                                  <tr>
+                                    <td>Distractores que dificultan la realización de tareas</td>
+                                    <td><button type="button" class="btn btn-success" id="OpenPopUp" onclick= "window.open('https://www.youtube.com/watch?v=S4wm2zPuNYU', '_blank', 'height=500,width=800,top=100,left=250')"><i class="bi bi-camera-reels-fill"></i></button>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td>Proyección de metas significativas</td>
+                                    <td><button type="button" class="btn btn-secondary" id="OpenPopUp" onclick="window.open('https://drive.google.com/file/d/1UQ3OV2ys6u8LZFiUDnikeGPKvZN558AD/view?usp=sharing', '_blank', 'height=500,width=800,top=100, left=250')"><i class="bi bi-file-pdf-fill"></i></button>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td>Teletrabajo: Las labores de la casa vs Las tareas del trabajo</td>
+                                    <td><button type="button" class="btn btn-warning" id="OpenPopUp" onclick="window.open('#', '_blank', 
+                                  'height=500,width=800,top=100, left=250')"><i class="bi bi-play-btn"></i></button>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td>Cambio de óptica: De actividad demandante a motivador</td>
+                                    <td><button type="button" class="btn btn-primary" id="OpenPopUp" onclick="window.open('#', '_blank', 
+                                  'height=500,width=800,top=100, left=250')"><i class="bi bi-emoji-smile-fill"></i></button>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
                         </article>
                     </div>
                 </div>                
@@ -183,7 +225,7 @@
     <br>       
     <section class="modulo1 rounded-3" id="actividadMod1">
         <h3>Actividad de afianzamiento</h3>
-        <div class="container text-center">
+        <div class="container text-left">
             <div class="row align-items-center">
                 <div class=col-md-4>
                     <figure class="img2">
@@ -192,13 +234,27 @@
                 </div>
                 <div class=col-md-8>
                     <article class="texto2" id="md2">
-                        <p class="textBold">"Algunas personas piensan que lo mejor de trabajar de manera remota es
-                            no tener al jefe encima"</p>
-                        <br>
-                        <p>Trabajar en casa conlleva a hacerlo sin la supervisión y orientación tradicional de la
-                            presencialidad. Esto implica que debes tomar decisiones y crear planes de trabajo para
-                            cumplir tus funciones de manera responsable. En este módulo encontrarás herramientas que
-                            fortalecerán tu autonomía, creatividad, productividad y responsabilidad.</p>
+                        <p>Con estas actividades puedes aprender jugando:</p>
+                        <table class="table">
+                            <thead>
+                              <tr>
+                                <th scope="col">Actividad</th>                                    
+                                <th scope="col">Accede</th>
+                              </tr>
+                            </thead>
+                            <tbody class="table-group-divider" id="miTabla">
+                              <tr>
+                                <td>Resuelve la sopa de letras - Conceptos claves</td>
+                                <td><button type="button" class="btn btn-danger" id="OpenPopUp" onclick= "window.open('https://es.educaplay.com/recursos-educativos/18938225-busqueda_de_recompensas.html', '_blank', 'height=500,width=800,top=100,left=250')"><i class="bi bi-joystick"></i></button>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>Supera los retos de este juego con todo lo que has aprendido</td>
+                                <td><button type="button" class="btn btn-danger" id="OpenPopUp" onclick="window.open('https://view.genial.ly/6632a4243ead6f00148cde4c/interactive-content-find-the-pairs', '_blank', 'height=500,width=800,top=100, left=250')"><i class="bi bi-joystick"></i></button>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
                     </article>
                 </div>
             </div>  
@@ -209,7 +265,7 @@
     <section class="modulo2 rounded-3" id="testMod1">
         <h3>Test de evaluación</h3>
         <hr>
-        <div class="container text-center">
+        <div class="container text-left">
             <div class="row align-items-center">
                 <div class=col-md-4>
                     <figure class="img2">
@@ -217,14 +273,22 @@
                     </figure>
                 </div>
                 <div class=col-md-8>
-                    <article class="texto2" id="testMod1">
-                        <p class="textBold">"Algunas personas piensan que lo mejor de trabajar de manera remota es
-                            no tener al jefe encima"</p>
-                        <br>
-                        <p>Trabajar en casa conlleva a hacerlo sin la supervisión y orientación tradicional de la
-                            presencialidad. Esto implica que debes tomar decisiones y crear planes de trabajo para
-                            cumplir tus funciones de manera responsable. En este módulo encontrarás herramientas que
-                            fortalecerán tu autonomía, creatividad, productividad y responsabilidad.</p>
+                    <article class="texto2" id="md2">
+                        <p>Es el momento de comprobar lo aprendido:</p>
+                        <table class="table">
+                            <thead>
+                              <tr>
+                                <th scope="col">Actividad</th>                                    
+                                <th scope="col">Accede</th>
+                              </tr>
+                            </thead>
+                            <tbody class="table-group-divider" id="miTabla">
+                              <tr>
+                                <td>Cuestionario del Módulo 1 - La búsqueda de recompensas</td>
+                                <td><button type="button" class="btn btn-dark" id="OpenPopUp" onclick="window.open('#', '_blank', 'height=500,width=800,top=100, left=250')"><i class="bi bi-bookmark-check"></i></button>
+                                </td>
+                            </tbody>
+                          </table>
                     </article>
                 </div>
             </div>            
@@ -261,7 +325,7 @@
         </div>
 
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
