--- a/public/modulo4.html
+++ b/public/modulo4.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
                 <div class="col-md-2">
-                    <a class="navbar-brand" href="#"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png"
+                    <a class="navbar-brand" href="https://www.arachnecol.com"><img src="./ASSETS/IMG/Logo ArachneCol cuadrado.png"
                             width="30%"></a>
                 </div>
                 <div class="col-md-8">
