--- a/public/ingreso.html
+++ b/public/ingreso.html
@@ -10,9 +10,9 @@
     <title>Login PEHTR</title>
 </head>
 <body class="wrap2 d-flex align-items-center justify-content-center vh-100">
-    <div class="inicioBox p-5 rounded-5 text-light" style="height: 30rem" >
+    <div class="inicioBox p-5 rounded-5 text-light" style="height: 30rem">
         <div class="d-flex justify-content-center">
-        <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height: 3rem"></a>
+        <a href="https://www.arachnecol.com"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height: 3rem"></a>
         </div>
         <div class="d-flex justify-content-center"><h3>Inicio de sesión</h3></div>
         <div class="justify-content-center">
@@ -20,7 +20,7 @@
                 <div class="input-group-text">
                     <i class="bi bi-person-fill"></i> 
                 </div>
-                <input class="form-control" type="text" placeholder="Usuario">
+                <input class="form-control" type="text" placeholder="Correo Electrónico" id="correoElectronico">
             </div>
         </div>
         <div class="justify-content-center mt-2">
@@ -28,7 +28,7 @@
                 <div class="input-group-text">
                 <i class="bi bi-lock-fill"></i> 
                 </div>
-                <input class="form-control" type="password" placeholder="Contraseña">
+                <input class="form-control" type="password" placeholder="Contraseña" id="contrasena">
             </div>
         </div>        
             <div>
@@ -38,7 +38,7 @@
             </div>
             <br>
             <div class="d-flex justify-content-center">
-            <button>Ingresa</button>
+            <button onclick="iniciarSesion()">Ingresa</button>
             </div>
         </div>
         <div class="d-flex justify-content-center"><a href="#">¿Olvidaste tu contraseña?</a></div>
@@ -58,8 +58,6 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="./soporte.html" target="_blank">Soporte</a>
                     </li>
-                    <hr>
-                    <li><a class="dropdown-item" href="./admin.html" target="_blank">Admin</a></li>
                 </ul>
             </li>
         </div>
@@ -70,5 +68,6 @@
 - Contraseña 
 - Botón de registro-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"> </script>
+<script src="./SCRIPTS/ingreso.js"></script>
 </body>
 </html>
