--- a/public/registro.html
+++ b/public/registro.html
@@ -11,35 +11,35 @@
     <title>Registro PEHTR</title>
 </head>
 
-<body class="wrap3 d-flex justify-content-center">
-    <div class="inicioBox p-5  rounded-5 text-light" style="width: 30rem">
+<body class="wrap3 d-flex align-items-center justify-content-center vh-100">
+    <div class="inicioBox p-5  rounded-5 text-light" style="height: 30rem;">
         <div class="d-flex justify-content-center">
-            <a href="./index.html"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height:3rem"></a>
+            <a href="https://www.arachnecol.com"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif" alt="LoginIcon" style="height:3rem"></a>
         </div>
         <div class="d-flex justify-content-center">
-            <h3>¡Bienvenido!</h3>
+            <h3>¡Bienvenid@!</h3>
         </div>
         <div class="d-flex justify-content-center">
             <p>Solo debes registrar estos datos y podrás acceder a nuestro contenido</p>
         </div>
         <div>
             <label>Nombre completo:</label>
-            <input type="text" placeholder="Escribe aqui tu nombre completo" style="width: 100%">
+            <input type="text" placeholder="Escribe aqui tu nombre completo" style="width: 100%" id="nombreCompleto">
         </div>
         <br>
         <div>
             <label>Correo electrónico:</label>
-            <input type="text" placeholder="Escribe aqui tu correo electrónico" style="width: 100%">
+            <input type="text" placeholder="Escribe aqui tu correo electrónico" style="width: 100%" id="correoElectronico">
         </div>
         <br>
         <div>
             <label>Asigna una contraseña:</label>
-            <input type="password" placeholder="Escribe aqui tu contraseña" style="width: 100%">
+            <input type="password" placeholder="Escribe aqui tu contraseña" style="width: 100%" id="contrasena">
         </div>
         <br>
         <div class="d-flex justify-content-between">
             <div class="justify-content-between">
-                <button>Enviar</button>
+                <button onclick="registrarUsuario()">Registrar</button>
             </div>
             <div>
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -53,6 +53,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"> </script>
+    <!-- Link de archivo javascript -->
+    <script src="./SCRIPTS/registro.js"></script>
 </body>
 
 </html>
