--- a/public/soporte.html
+++ b/public/soporte.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
                 <div class="col-md-3 col-sm-1">
-                    <a class="navbar-brand" href="#"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif"
+                    <a class="navbar-brand" href="https://www.arachnecol.com"><img src="./ASSETS/IMG/Logo ArachneCol Software/iconoVectoresBlanco2.gif"
                             width="30%"></a>
                 </div>
                 <div class="col-md-9 col-sm-11">
@@ -36,33 +36,19 @@
 
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Inicio</a>
+                                <a class="nav-link" href="#">ArachneCol</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html#queEs">¿Qué es el PEHTR?</a>
+                                <a class="nav-link" href="#">¿Quiénes somos?</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html#estructura">Estructura</a>
+                                <a class="nav-link" href="#">Productos</a>
                             </li>
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Contenido
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./index.html#mod1">Módulo 1 - Introducción</a></li>
-                                    <li><a class="dropdown-item" href="./index.html#mod2">Módulo 2 - Habilidades de
-                                            autonomía</a></li>
-                                    <li><a class="dropdown-item" href="./index.html#mod3">Módulo 3 - Habilidades para la
-                                            buena
-                                            gestión del tiempo</a></li>
-                                    <li><a class="dropdown-item" href="./index.html#mod4">Módulo 4 - Uso de herramientas
-                                            tecnológicas</a></li>
-                                </ul>
-                                
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contáctanos</a>
                             </li>
                         </ul>
                     </div>
